@@ -1,3 +1,8 @@
+2003-07-24  Daniel Jacobowitz  <drow@mvista.com>
+
+	* linux-arm-low.c (arm_reinsert_addr): New function.
+	(the_low_target): Add arm_reinsert_addr.
+
 2003-06-28  Daniel Jacobowitz  <drow@mvista.com>
 
 	* configure.in: Check whether we need to prototype strerror.
